--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,14 @@ body {
 	padding-top: 80px; 	
 }
 
+.red {
+	background-color: red;
+}
+
+.changeBackground {
+	background-color:blue;
+}
+
 nav {
 	padding: 20px 20px 30px;
 	background-image: url("http://moziru.com/images/green-clipart-speech-bubble-17.png");
