--- a/styles/bobRoss.css
+++ b/styles/bobRoss.css
@@ -1,8 +1,8 @@
 /*All colors are from the Bob Ross CSS collection... https://thomaspark.co/2015/11/bob-ross-color-palette-in-css/*/
 
-body { 
-	padding-top: 80px; 
-  font-family: 'Vibur', cursive;	
+body {
+	padding-top: 80px;
+  font-family: 'Vibur', cursive;
   background-image: url("http://artist.com/art-recognition-and-education/wp-content/themes/artist-blog/media-files/2016/04/mountains-7.jpg");
   background-position: center;
   background-size: 100%;
@@ -18,8 +18,8 @@ nav {
 }
 
 .navbar-brand {
-  	padding-right: 0;	
-  	padding-left: 150px; 	
+  	padding-right: 0;
+  	padding-left: 150px;
 	font-size: 4.5em;
 	color: #5F2E1F; /*Dark Sienna*/
 }
@@ -74,4 +74,9 @@ nav {
   border: 2px solid #FFEC00;
   background-color: rgba(16, 46, 60, 0.8); /*Prussian Blue*/
   color: #FFB800; /*Indian Yellow*/
+}
+
+/*emoji sizing*/
+.emoji {
+	max-width: 15px;
 }
