--- a/styles/darth.css
+++ b/styles/darth.css
@@ -1,5 +1,5 @@
-body { 
-	padding-top: 80px; 
+body {
+	padding-top: 80px;
   font-family: 'Source Code Pro', monospace;
   background-image: url("https://i2.wp.com/techlogitic.net/wp-content/uploads/2015/11/2553_star_wars-1024x576.jpg");
   background-position: center;
@@ -16,8 +16,8 @@ nav {
 }
 
 .navbar-brand {
-	padding-right: 0;	
-	padding-left: 100px; 	
+	padding-right: 0;
+	padding-left: 100px;
 	font-size: 4.5em;
 	color: #000;
 }
@@ -71,4 +71,9 @@ nav {
 
 .hidden-cat {
   display: none;
+}
+
+/*emoji sizing*/
+.emoji {
+	max-width: 15px;
 }
