--- a/styles/magical.css
+++ b/styles/magical.css
@@ -78,6 +78,12 @@ nav {
   color: black;
 }
 
+.messageCard {
+	border-bottom: 2px solid darkgrey;
+	padding-bottom: 5px;
+	padding-top: 5px;
+}
+
 /*emoji sizing*/
 .emoji {
 	max-width: 15px;
